riscv: Support RISC-V Privileged Architecture v1.9, matching 65da94f84a2ba5a61a8bcf3ebdd8ca57f6d899ca of riscv-tools

--- a/hw/riscv/Makefile.objs
+++ b/hw/riscv/Makefile.objs
@@ -1,5 +1,6 @@
-obj-y += riscv_board.o
-obj-y += cputimer.o riscv_int.o
+obj-y += riscv_rtc.o riscv_int.o
+obj-y += htif/elf_symb.o
 obj-y += htif/htif.o
 obj-y += htif/frontend.o
-obj-y += softint.o
+obj-y += riscv_softint.o
+obj-y += riscv_board.o
